--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,8 +18,7 @@
     "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
     "react/react-in-jsx-scope": "off",
     "import/no-unresolved": "off",
-    "no-shadow": "off",
-    "jsx-a11y": "off"
+    "no-shadow": "off"
   },
   "ignorePatterns": [
     "dist/",
